FIXED THE SPACING ISSUEEE :smiley:

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
 a {
   color: #ffdc5d;
   text-decoration: none;
+  margin: 0;
 }
 
 a:hover {
